--- a/prod/07-jbook/package.json
+++ b/prod/07-jbook/package.json
@@ -8,13 +8,19 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.0",
+    "@types/jscodeshift": "0.7.2",
     "@types/node": "^16.11.33",
+    "@types/prettier": "^2.6.1",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
     "axios": "^0.27.2",
+    "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "0.8.27",
+    "jscodeshift": "0.11.0",
     "localforage": "^1.10.0",
     "monaco-editor": "0.33.0",
+    "monaco-jsx-highlighter": "0.0.15",
+    "prettier": "^2.6.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
